helios-library-app/src/objects/Book_Copy__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Copies of Books</relationshipLabel>
        <relationshipName>Copies_of_Books</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Copy_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>ID#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Donated_By__c</fullName>
        <inlineHelpText>You can leave this field blank if there is no identified donor.</inlineHelpText>
        <label>Donated By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Checked_Out__c</fullName>
        <label>Is Checked Out</label>
        <summaryFilterItems>
            <field>Checkout__c.Is_Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Checkout__c.Book_Copy__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Library_long__c</fullName>
        <description>Longer version of the collection name</description>
        <formula>IF( St_Martin__c , &apos;St. Martin&apos;, &apos;Helios&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Library_long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_short__c</fullName>
        <description>1-2 character code for the library</description>
        <formula>IF( St_Martin__c , &apos;SM&apos;, &apos;H&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Library_short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Status__c</fullName>
        <inlineHelpText>The permanet status of this book copy.</inlineHelpText>
        <label>Deletion Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reported Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destroyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed from Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erroneous Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>St_Martin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this book belong to the St. Martin&apos;s collection?</inlineHelpText>
        <label>St. Martin&apos;s Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Waiting On Copy</label>
        <referenceTo>Waitlist_Entry__c</referenceTo>
        <relationshipLabel>Copies of Books</relationshipLabel>
        <relationshipName>Waiting_On</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Copy of Book</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Copy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copies of Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>